bases/frontend/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          image: docker.io/slamdev/frontend:ff6b81
          ports:
            - name: http
              containerPort: 80
