bases/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
